version/0.23/_sources/api/solver/_autosummary/settings/partition_coeff.rst.txt
:orphan:

.. _partition_coeff:

partition_coeff
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.partition_coeff.partition_coeff
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_12>`                                          Select method for calculating material property.

:ref:`value <value_11>`                                                        Specify the constant property value.

:ref:`piecewise_linear <piecewise_linear_2>`               Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                                   Piecewise polynomial settings.

:ref:`polynomial <polynomial_2>`                                                               Polynomial settings.

:ref:`expression <expression>`                                         Specify the property value as an expression.

:ref:`user_defined_function <user_defined_function>`                                 Specify user defined function.

====================================================   ============================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

